<resources>
    <string name="app_name">Диспетчер МЧС</string>
    <string name="radio">Радио</string>
    <string name="tasks">Задания</string>
    <string name="buildings">Здания</string>
    <string name="map">Карта</string>
    <string name="USD">10$</string>
    <string name="account">Аккаунт</string>
    <!-- Strings related to login -->
    <string name="name_account">Abram This</string>
    <string name="email">E-mail:</string>
    <string name="example_email">example-mail@mail.ru</string>
    <string name="password">Пароль:</string>
    <string name="example_password">введите пароль сюда</string>
    <string name="save_password">Запомнить пароль</string>
    <string name="add">Добавить</string>
    <string name="build">Построить здание</string>
    <string name="cancel">отмена</string>
    <string name="building">Строительство</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="iconBuilding">Иконка здания</string>
    <string name="iconCar">Иконка машины</string>
    <string name="codeCar">Код</string>
    <string name="typeCar">тип машины</string>
    <string name="nameCar">Пользовательское название</string>
    <string name="coordinate">Координаты</string>
    <string name="coordinateExample">55.03987264242,\n33.456776547654,\n 0.000</string>
    <string name="change">изменить</string>
    <string name="typeBuilding">Тип здания:</string>
    <string name="getTypeBuilding">Выбор здания</string>
    <string name="nameBuilding">Название:</string>
    <string name="nameBuildingExample">Базовая станция</string>
    <string name="costBuilding">Стоимость постройки:</string>
    <string name="addCar">Добавление машины</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="map_world">мировая карта</string>
    <string name="contacts">Контакты:</string>
    <string name="contact_mail">sozmi@vk.com</string>
    <string name="entrance">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="vk_logo">vk</string>
    <string name="google_logo">google</string>
    <string name="telegram_logo">telegram</string>
    <string name="example_name">Название задания</string>
    <string name="example_time">02:55:10</string>
    <string name="example_info">info</string>
    <string name="logo_task">task image</string>
    <string name="authorization">АВТОРИЗАЦИЯ</string>
    <string name="registrations">РЕГИСТРАЦИЯ</string>
    <string name="login">Логин:</string>
    <string name="login_example">введите ваш логин</string>
    <string name="registrationss">зарегистрироваться</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>