<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authorization_view.fragment.RegistrationFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fontFamily="@font/oswald"
        android:gravity="center"
        android:text="@string/registrations"
        android:textSize="@dimen/big_text" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/login"
        android:textColor="@color/day.primary.dark" />

    <EditText
        android:id="@+id/nameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="username"
        android:hint="@string/login_example"
        android:inputType="textPersonName"
        android:paddingHorizontal="12dp"
        android:maxLength="16"
        android:paddingVertical="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/email"
        android:textColor="@color/day.primary.dark" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="emailAddress"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/password"
        android:textColor="@color/day.primary.dark" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="password"
        android:hint="@string/example_password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp" />

    <CheckBox
        android:id="@+id/isSave"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="48dp"
        android:text="@string/save_password" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/button_red_text"
        android:text="@string/registrationss" />
</LinearLayout>