<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageCar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/day.secondary"
        android:src="@drawable/ic_radio"
        android:contentDescription="@string/iconCar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameCar"/>
        <TextView
            android:id="@+id/typeCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeCar"/>
    </LinearLayout>
    <TextView
        android:id="@+id/statusCar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:textColor="@color/icons"
        android:text="@string/codeCar"/>





</LinearLayout>