<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageGroupTask"
        android:layout_width="20dp"
        android:layout_height="65dp"
        android:background="@drawable/share_yellow"
        android:src="@drawable/ic_star"
        android:contentDescription="@string/logo_task" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imageGroupTask"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nameTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="25dp"
            android:text="@string/example_name"
            android:textSize="@dimen/medium_text" />

        <LinearLayout
            android:id="@+id/panelTimerTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <ProgressBar
                android:id="@+id/progressBarTask"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="188dp"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/timerTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/example_time" />

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/infoTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="top|end"
        android:layout_marginEnd="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/example_info"
        android:src="@drawable/ic_go">

    </ImageButton>

</RelativeLayout>